# risk

./: .gitignore  LEARNING_GUIDE.md  README.md  build_release.sh  build_release_windows.ps1  eslint.config.js  index.html  package-lock.json  package.json  ruff.toml
.github/release-notes/: v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md
.github/workflows/: release.yml  sync-gitee-release.yml  windows-build.yml
backend/: build_sidecar.py  main.py  requirements-build.txt  requirements-dev.txt
backend/src/risk_backend/: __init__.py  api_server.py  application.py  exporters.py  logging_config.py  security.py  serialization.py  tabular_import.py  workspace_import.py  xlsx.py
backend/tests/: test_api_security.py  test_application_validation.py  test_calculator_golden.py  test_catalog_name_matching.py  test_concentration_units.py  test_gitee_release_publisher.py  test_parameter_units.py  test_parameter_validation.py  test_result_ordering.py  test_result_transactions.py  test_security.py  test_shutdown.py  test_xlsx_limits.py
backend/tests/fixtures/: calculator_golden.json
scripts/: publish_gitee_release.py  smoke_macos_bundle.sh
src/: App.jsx  AppDialogs.jsx  AppPanels.jsx  api.js  appHelpers.js  appHelpers.test.js  components.jsx  constants.js  fileTransfers.js  main.jsx  styles.css  updateService.js  updateService.test.js  versionConsistency.test.js  versioning.js  versioning.test.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+12 files in other folders)
