[package]
name = "risk_studio"
version = "0.1.0"
description = "Modern desktop rewrite for the risk evaluation workflow"
authors = ["carson"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
