[package]
name = "risk_studio"
version = "1.1.7"
description = "Modern desktop rewrite for the risk evaluation workflow"
authors = ["carson"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "=2.5.3"
tauri-plugin-shell = "2"
